isd/oes/templates/ingress/oes-gate-ingress.yaml
---
# Source: oes/templates/ingress/oes-gate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-isd311-spin
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
  name: oes-gate-ingress
spec:
  rules:
  - host: oesgate.iswstash.opsmx.com
    http:
      paths:
      - backend:
          service:
            name: oes-gate
            port:
              number: 8084
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - oesgate.iswstash.opsmx.com
    secretName: oes-gate-ingress
